--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </tr>
                 <tr>
                     <th>FOB Port</th>
-                    <td>Xiamen, Chinna</td>
+                    <td>Xiamen, China</td>
                 </tr>
                 <tr>
                     <th>More Details - Packaging PPT</th>
@@ -208,3 +208,4 @@
     </div>
 </body>
 </html>
+
